# woodchipper

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
doc/: customization.md  design.md  install.md
doc/design/: design.md
misc/: cargo-conf-mingw.toml  kubectl-woodchipper
misc/demo/: demo.py
src/: clip.rs  config.rs  filter.rs  main.rs  style.rs
src/classifier/: context.rs  kelog.rs  level.rs  logrus.rs  metadata.rs  mod.rs  source.rs  text.rs  timestamp.rs  types.rs  util.rs
src/parser/: json.rs  klog.rs  logrus.pest  logrus.rs  mod.rs  plain.rs  regex.rs  types.rs  util.rs
src/reader/: kubernetes.rs  mod.rs  null.rs  ordered.rs  stdin.rs  stdin_hack.rs  types.rs
src/reader/kubernetes/: kubeconfig.rs  kubernetes.rs  mod.rs
src/renderer/: common.rs  json.rs  mod.rs  plain.rs  raw.rs  styled.rs  types.rs
src/renderer/interactive/: bar.rs  filter_bar.rs  log.rs  mod.rs  search_bar.rs  state.rs  status_bar.rs  text.rs
