[package]
name = "woodchipper"
version = "0.1.0"
authors = ["Tim Buckley <timothy.jas.buckley@hpe.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
homepage = "https://github.com/HewlettPackard/woodchipper/"
repository = "https://github.com/HewlettPackard/woodchipper/"
description = "An interactive command-line log processor"
exclude = [".circleci/**/*"]

[badges]
circle-ci = { repository = "HewlettPackard/woodchipper", branch = "master" }

[dependencies]
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.8"
chrono = { version = "0.4.6", features = ["serde"] }
dtparse = "1.0.3"
regex = "1.1.2"
crossterm = "0.8.2"
lazy_static = "1.3.0"
textwrap = "0.11.0"
structopt = "0.2.15"
simple-error = "0.2"
maplit = "1.0.1"
ansi_term = "0.11.0"
shellexpand = "1.0.0"
atty = "0.2.11"
jsonpath = "0.1.1"
reqwest = "0.9"
rand = "0.6"
subprocess = "0.1"
pest = "2.1"
pest_derive = "2.1"

[target.'cfg(not(target_env = "musl"))'.dependencies]
clipboard = "0.5.0"

[dev-dependencies]
spectral = "0.6.0"

[profile.release]
lto = true

[features]
default = ["wd-clipboard"]

wd-clipboard = []
